--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-native": "0.77.0"
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.2",
+    "@react-native-firebase/app": "^22.2.1",
+    "@react-navigation/elements": "^2.5.1",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
+    "@react-navigation/stack": "^7.4.1",
+    "axios": "^1.10.0",
+    "firebase": "^11.9.1",
+    "install": "^0.13.0",
+    "react": "^18.3.1",
+    "react-native": "^0.77.0",
+    "react-native-flash-message": "^0.4.2",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-safe-area-context": "^5.5.0",
+    "react-native-screens": "^4.11.1",
+    "react-native-svg": "^15.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
