--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "^0.77.0",
     "react-native-flash-message": "^0.4.2",
     "react-native-image-picker": "^8.2.1",
+    "react-native-pie-chart": "^4.0.1",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
     "react-native-svg": "^15.12.0"
