--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@react-navigation/native-stack": "^7.3.21",
     "@react-navigation/stack": "^7.4.1",
     "axios": "^1.10.0",
-    "firebase": "^11.9.1",
+    "firebase": "^11.10.0",
     "install": "^0.13.0",
     "react": "^18.3.1",
     "react-native": "^0.77.0",
     "react-native-flash-message": "^0.4.2",
+    "react-native-get-location": "^5.0.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-location": "^2.5.0",
     "react-native-pie-chart": "^4.0.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.0",
