--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "install": "^0.13.0",
     "react": "^18.3.1",
     "react-native": "^0.77.0",
+    "react-native-feather": "^1.1.2",
     "react-native-flash-message": "^0.4.2",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-get-location": "^5.0.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-location": "^2.5.0",
