--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.2",
-    "@react-native-firebase/app": "^22.2.1",
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/database": "^22.4.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/elements": "^2.5.2",
     "@react-navigation/native": "^7.1.14",
@@ -21,6 +23,8 @@
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
     "install": "^0.13.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "react": "^18.3.1",
     "react-native": "^0.77.0",
     "react-native-feather": "^1.1.2",
@@ -29,11 +33,14 @@
     "react-native-get-location": "^5.0.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-location": "^2.5.0",
+    "react-native-maps": "^1.24.5",
+    "react-native-permissions": "^5.4.1",
     "react-native-pie-chart": "^4.0.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
-    "react-native-svg": "^15.12.0"
+    "react-native-svg": "^15.12.0",
+    "react-native-webview": "^13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
