--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@react-native-community/datetimepicker": "^8.4.2",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/auth": "^22.4.0",
     "@react-native-firebase/database": "^22.4.0",
+    "@react-native-firebase/firestore": "^22.4.0",
+    "@react-native-firebase/storage": "^22.4.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/elements": "^2.5.2",
     "@react-navigation/native": "^7.1.14",
