--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.3.1",
     "react-native": "^0.77.0",
     "react-native-date-picker": "^5.0.13",
+    "react-native-document-picker": "^9.3.1",
     "react-native-feather": "^1.1.2",
     "react-native-flash-message": "^0.4.2",
     "react-native-geolocation-service": "^5.3.1",
