--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "install": "^0.13.0",
     "react": "^18.3.1",
     "react-native": "^0.77.0",
+    "react-native-blob-util": "^0.22.2",
     "react-native-date-picker": "^5.0.13",
     "react-native-document-picker": "^9.3.1",
     "react-native-feather": "^1.1.2",
@@ -34,11 +35,13 @@
     "react-native-get-location": "^5.0.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-location": "^2.5.0",
+    "react-native-pdf": "^6.7.7",
     "react-native-pie-chart": "^4.0.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
-    "react-native-svg": "^15.12.0"
+    "react-native-svg": "^15.12.0",
+    "react-native-webview": "^13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
